Fix style on mobile autocomplete popup

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -161,7 +161,9 @@ main {
     width: calc(100% - 50px);
     padding: 30px 20px;
     background-color: #fff;
+    border-right: 2px solid $brown-2;
     border-bottom: 2px solid $brown-2;
+    border-bottom-right-radius: 20px;
     display: flex;
     flex-direction: column;
     gap: 20px;
